--- a/src/ApplicantTracking.Api/ApplicantTracking.Api.csproj
+++ b/src/ApplicantTracking.Api/ApplicantTracking.Api.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <UserSecretsId>c819f06d-ce37-41ba-bd33-64410b2a70db</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
