--- a/src/ApplicantTracking.Infrastructure/ApplicantTracking.Infra.Data/ApplicantTracking.Infra.Data.csproj
+++ b/src/ApplicantTracking.Infrastructure/ApplicantTracking.Infra.Data/ApplicantTracking.Infra.Data.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.20">
       <PrivateAssets>all</PrivateAssets>
@@ -22,6 +23,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\ApplicantTracking.Domain\ApplicantTracking.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
