--- a/src/ApplicantTracking.Infrastructure/ApplicantTracking.Infrastructure.csproj
+++ b/src/ApplicantTracking.Infrastructure/ApplicantTracking.Infrastructure.csproj
@@ -2,7 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.20" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ApplicantTracking.Application\ApplicantTracking.Application.csproj" />
